--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ aiofiles==24.1.0
 aiohappyeyeballs==2.4.6
 aiohttp==3.11.12
 aiosignal==1.3.2
+altair==5.5.0
 annotated-types==0.7.0
 anyio==4.8.0
 appnope==0.1.4
@@ -10,13 +11,15 @@ asttokens==3.0.0
 attrs==25.1.0
 backoff==2.2.1
 beautifulsoup4==4.12.3
+blinker==1.9.0
 bs4==0.0.2
-certifi>=2024.7.4,<2025.0.0
+cachetools==5.5.2
+certifi==2024.12.14
 cffi==1.17.1
 chardet==5.2.0
 charset-normalizer==3.4.1
 click==8.1.8
-code_bert_score==0.4.1
+code-bert-score==0.4.1
 codebleu @ git+https://github.com/k4black/codebleu@b0edb622f6a52fe9d1edc407be5061d3e1462a7f
 colorama==0.4.6
 comm==0.2.2
@@ -27,13 +30,13 @@ dataclasses-json==0.6.7
 datasets==3.2.0
 debugpy==1.8.12
 decorator==5.1.1
-Deprecated==1.2.18
+deprecated==1.2.18
 dill==0.3.8
 dirtyjson==1.0.8
 distro==1.9.0
 editdistance-s==1.0.0
 emoji==2.14.1
-eval_type_backport==0.2.2
+eval-type-backport==0.2.2
 evaluate==0.4.3
 executing==2.2.0
 filelock==3.17.0
@@ -41,6 +44,8 @@ filetype==1.2.0
 fonttools==4.55.8
 frozenlist==1.5.0
 fsspec==2024.9.0
+gitdb==4.0.12
+gitpython==3.1.44
 greenlet==3.1.1
 h11==0.14.0
 html5lib==1.1
@@ -52,15 +57,17 @@ idna==3.10
 ipykernel==6.29.5
 ipython==8.31.0
 jedi==0.19.2
-Jinja2==3.1.5
+jinja2==3.1.5
 jiter==0.8.2
 joblib==1.4.2
 jsonargparse==4.36.0
 jsonpatch==1.33
 jsonpath-python==1.0.6
 jsonpointer==3.0.0
-jupyter_client==8.6.3
-jupyter_core==5.7.2
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+jupyter-client==8.6.3
+jupyter-core==5.7.2
 kiwisolver==1.4.8
 langchain==0.3.18
 langchain-community==0.3.17
@@ -73,7 +80,7 @@ langgraph==0.2.70
 langgraph-checkpoint==2.0.12
 langgraph-sdk==0.1.51
 langsmith==0.3.8
-Levenshtein==0.26.1
+levenshtein==0.26.1
 lightning-utilities==0.11.9
 llama-cloud==0.1.10
 llama-index==0.12.14
@@ -90,15 +97,18 @@ llama-index-readers-file==0.4.4
 llama-index-readers-llama-parse==0.4.0
 llama-parse==0.5.20
 lxml==5.3.0
-MarkupSafe==3.0.2
+markdown-it-py==3.0.0
+markupsafe==3.0.2
 marshmallow==3.26.1
 matplotlib==3.10.0
 matplotlib-inline==0.1.7
+mdurl==0.1.2
 mpmath==1.3.0
 msgpack==1.1.0
 multidict==6.1.0
 multiprocess==0.70.16
 mypy-extensions==1.0.0
+narwhals==1.28.0
 nest-asyncio==1.6.0
 networkx==3.4.2
 nltk==3.9.1
@@ -113,48 +123,56 @@ pexpect==4.9.0
 pillow==11.1.0
 platformdirs==4.3.6
 portalocker==3.1.1
-prompt_toolkit==3.0.50
+prompt-toolkit==3.0.50
 propcache==0.2.1
+protobuf==5.29.3
 psutil==6.1.1
 ptyprocess==0.7.0
-pure_eval==0.2.3
+pure-eval==0.2.3
 pyarrow==19.0.0
 pycparser==2.22
 pydantic==2.10.6
+pydantic-core==2.27.2
 pydantic-settings==2.7.1
-pydantic_core==2.27.2
-Pygments==2.19.1
+pydeck==0.9.1
+pygments==2.19.1
 pyparsing==3.2.1
 pypdf==5.2.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-iso639==2025.2.8
-python-Levenshtein==0.26.1
+python-levenshtein==0.26.1
 python-magic==0.4.27
 python-oxmsg==0.0.2
 pytorch-lightning==2.5.0.post0
 pytz==2024.2
-PyYAML==6.0.2
+pyyaml==6.0.2
 pyzmq==26.2.0
-RapidFuzz==3.11.0
+rapidfuzz==3.11.0
+referencing==0.36.2
 regex==2024.11.6
 requests==2.32.3
 requests-toolbelt==1.0.0
-rouge_score==0.1.2
+rich==13.9.4
+rouge-score==0.1.2
+rpds-py==0.23.1
 sacrebleu==2.5.1
 safetensors==0.5.2
 setuptools==75.8.0
 six==1.17.0
+smmap==5.0.2
 sniffio==1.3.1
 soupsieve==2.6
-SQLAlchemy==2.0.38
+sqlalchemy==2.0.38
 stack-data==0.6.3
+streamlit==1.42.2
 striprtf==0.0.26
 sympy==1.13.1
 tabulate==0.9.0
 tenacity==9.0.0
 tiktoken==0.8.0
 tokenizers==0.21.0
+toml==0.10.2
 torch==2.6.0
 torchmetrics==1.6.1
 tornado==6.4.2
@@ -164,8 +182,8 @@ transformers==4.48.1
 tree-sitter==0.23.2
 tree-sitter-java==0.23.5
 tree-sitter-python==0.23.6
+typing-extensions==4.12.2
 typing-inspect==0.9.0
-typing_extensions==4.12.2
 tzdata==2025.1
 unstructured==0.16.20
 unstructured-client==0.29.0
