--- a/requirements.txt
+++ b/requirements.txt
@@ -95,6 +95,7 @@ llama-index-program-openai==0.3.1
 llama-index-question-gen-openai==0.3.0
 llama-index-readers-file==0.4.4
 llama-index-readers-llama-parse==0.4.0
+llama-index-llms-openai-like==0.3.3
 llama-parse==0.5.20
 lxml==5.3.0
 markdown-it-py==3.0.0
